人狼の殺人追加

--- a/WEB PAGE/confirmation.html
+++ b/WEB PAGE/confirmation.html
@@ -98,10 +98,8 @@
                     location.href = "./morning.html";
                 } else if (nextPage === "speech") {
                     location.href = "./speech.html";
-                } else if (nextPage === "speech10" && day == 0) {
+                } else if (nextPage === "speech10") {
                     location.href = "./speech10.html";
-                } else if (nextPage === "speech10" && day != 0) {
-                    location.href = "./discuss.html";
                 } else if (nextPage === "vote") {
                     location.href = "./vote.html";
                 } else if (nextPage === "index") {
