いろんな機能追加。 占い、狂人、その他バグ修正

--- a/WEB PAGE/confirmation.html
+++ b/WEB PAGE/confirmation.html
@@ -29,7 +29,7 @@
         <div class="text-center">
             <div>
                 <p>あなたは <span id="playerNumber"></span> 番のプレイヤーですか？</p>
-                <button type="button" onclick="proceedToNextPage()">はい</button>
+                <button class="btn btn-danger mt-3" type="button" onclick="proceedToNextPage()">はい</button>
                 <p id="errorMessage" style="color: red; display: none;"></p>
             </div>
         </div>
